--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "gardenreboot064",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch sass/main.scss:public/css/main.css"
+    "sass": "sass --watch sass/main.scss:public/css/main.css",
+    "browser-sync": "node bs.js",
+    "dev": "npm-run-all --parallel sass browser-sync"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^3.0.3",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.85.0"
   }
 }
